--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/http-foundation": "~2.6"
     },
     "require-dev": {
+        "codeception/codeception": "*"
     },
     "autoload": {
         "psr-4": {
