--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3",
-        "symfony/http-foundation": "~2.6"
+        "php": ">=5.3"
     },
     "require-dev": {
         "codeception/codeception": "*"
